# DataMining

./: Lab1 - classification.ipynb  Lab2-association_clusterization.ipynb  Lab2-prepare_arxiv.ipynb  pyproject.toml
