[project]
name = "datamining"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.9"
dependencies = [
    "imbalanced-learn>=0.12.4",
    "ipykernel>=6.31.0",
    "librosa>=0.11.0",
    "matplotlib>=3.9.4",
    "mlxtend>=0.23.4",
    "nltk>=3.9.2",
    "numba>=0.57,<0.60",
    "pacmap>=0.9.1",
    "pandas>=2.3.3",
    "scikit-learn>=1.6.1",
    "seaborn>=0.13.2",
    "sentence-transformers>=5.1.2",
    "tqdm>=4.67.3",
    "ucimlrepo>=0.0.7",
]
